# numpy-feedstock

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  cblas_example1.c
.ci_support/: linux_c_compilertoolchain_ccxx_compilertoolchain_cxxfortran_compilertoolchain_fortpython2.7.yaml  linux_c_compilertoolchain_ccxx_compilertoolchain_cxxfortran_compilertoolchain_fortpython3.6.yaml  linux_c_compilertoolchain_ccxx_compilertoolchain_cxxfortran_compilertoolchain_fortpython3.7.yaml  osx_c_compilertoolchain_ccxx_compilertoolchain_cxxfortran_compilertoolchain_fortpython2.7.yaml  osx_c_compilertoolchain_ccxx_compilertoolchain_cxxfortran_compilertoolchain_fortpython3.6.yaml  osx_c_compilertoolchain_ccxx_compilertoolchain_cxxfortran_compilertoolchain_fortpython3.7.yaml  win_c_compilervs2015cxx_compilervs2015python3.6.yaml  win_c_compilervs2015cxx_compilervs2015python3.7.yaml
recipe/: bld.bat  build.sh  meta.yaml  run_test.py
